# aoc

./: .gitignore  Cargo.toml  README.md
abs-diff/: Cargo.toml
abs-diff/src/: lib.rs
day1/: Cargo.toml
day1/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs  strict.rs  tolerant.rs
day3/: Cargo.toml
day3/src/: main.rs  parser.rs
day4/: Cargo.toml
day4/src/: main.rs  transform.rs  x_mas.rs  xmas.rs
input/src/: lib.rs
